@@ -1,3 +1,9 @@
+Mon Apr 12 10:37:35 2004  Nick Burrett  <nick@dsvr.net>
+
+	* unix/unix.c (_exit): Set DDEUtils Prefix when parent process
+	exits.  Add an assertion failure if __u is NULL. 
+	(__unixinit): Add more explanatory comments.
+
 Sat Apr 10 11:23:16 2004  Nick Burrett  <nick@dsvr.net>
 
 	* stdint.h (uintptr_t): Move declaration to be not influenced
